# gemini-web

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.claude/skills/: generate-image.md
.github/workflows/: publish.yml  test.yml
docs/: design.md  openclaw-integration.md  plan.md
docs/superpowers/plans/: 2026-03-31-worker-pool.md
scripts/: explore_upload_selector.py  install-service.sh  setup.sh
src/: browser.py  cli.py  config.py  gemini.py  main.py  official_api.py  openclaw_adapter.py  queue.py  selectors.py  watermark.py  worker_pool.py
src/commands/: chat.md  chat.toml  gemini-image.md  gemini-image.toml  gemini-web.md  gemini-web.toml  generate.md  generate.toml
tests/: test_config.py  test_openclaw_adapter.py  test_queue.py  test_watermark.py  test_worker_pool.py
