[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gemini-image"
version = "0.5.0"
description = "Gemini 圖片生成 API 服務"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "playwright>=1.49",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27"]

[project.scripts]
gemini-image = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["src/assets/*.png", "src/commands/*.md", "src/commands/*.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
